@@ -49,7 +49,7 @@ class Interactions(QObject):
             
         self.queueModel_ = universal.queueInstance.queueModel
         
-        self._currentSongCover = universal.KImage(placeholder=universal.Placeholders.GENERIC, deffered=True, cover=True, radius=10)
+        self._currentSongCover = universal.KImage(placeholder=universal.Placeholders.GENERIC, deffered=True, cover=True, radius=50)
         self._currentSongCover.setParent(self)
         self._currentSongCover.imageChanged.connect(self.coverChangedTest)
         universal.queueInstance.songChanged.connect(self.changeSongKImage)
